--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -1,3 +1,55 @@
-<div>
-  <h1>About Us</h1>
-</div>
+<style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f2f2f2;
+    }
+
+    .container {
+      /*display: flex;*/
+      justify-content: center;
+      align-items: center;
+      height: 70vh;
+    }
+
+    .form {
+      background-color: #fff;
+      padding: 10px;
+      border-radius: 5px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      align-items: center;
+      text-align: justify;
+    }
+
+    .form h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .form a {
+      width: 100%;
+      padding: 3px;
+      background-color: #29317e;
+      color: #fff;
+      border: none;
+      border-radius: 3px;
+      display: flex;
+      justify-content: center;
+    }
+  </style>
+  <body>
+  <div class="container">
+    <form class="form" action="#">
+      <h2>About CodeCamp</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dui urna, scelerisque vitae euismod in, pretium nec eros. Cras quam sem, aliquam vitae odio a, pretium finibus mi. Mauris dignissim a orci et tempor. Aenean aliquam vel lorem id malesuada. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed id ipsum lacus. Duis aliquet nisl sed metus egestas, nec eleifend lacus fermentum. Sed eget lorem eros. Duis lacus lacus, faucibus eget maximus at, euismod sit amet est. Mauris id mi ac ligula mollis tempor sodales vel nunc. Nulla justo nulla, tristique nec nibh ac, varius viverra mauris. Maecenas eget velit risus.
+      </p>
+      <p>Ut pellentesque, purus sit amet luctus porttitor, metus est ultrices metus, et suscipit lectus est quis nisl. Etiam id pharetra mi, eget ullamcorper lorem. Pellentesque a accumsan felis, quis vehicula ligula. Cras porta sed leo vel sodales. Nam est velit, ultricies sed lorem et, vulputate sodales urna. Phasellus egestas tortor id magna elementum ultrices. In cursus risus sit amet enim varius convallis. Phasellus sed arcu nec nisi pharetra placerat in ac sapien. Phasellus suscipit posuere malesuada. Vestibulum sit amet felis luctus neque interdum suscipit fringilla nec ante. Maecenas et neque lobortis, volutpat velit at, tristique mi.
+      </p>
+      <p>Curabitur id leo suscipit, viverra nulla sed, tempus turpis. Aenean dui justo, porttitor in sem dictum, hendrerit finibus arcu. Pellentesque pellentesque a mi eu tempor. Maecenas pellentesque pretium orci et auctor. Cras id iaculis eros. In ac cursus eros. Duis nulla lacus, facilisis id nisi eget, suscipit viverra magna. Nunc in vehicula odio. Integer posuere sed nibh sit amet porttitor. Sed a tortor dui. Nunc euismod sagittis dui nec ornare. Nullam gravida porta justo sit amet feugiat.
+      </p>
+      <hr>
+      <a href="/courses">View courses</a>
+    </form>
+  </div>
+  </body>
