--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -45,8 +45,8 @@
             <a href="/about-us" class="nav-item">About Us</a>
         </div>
         <div class="nav-bar-auth">
-            <a class="nav-item">Login</a>
-            <a class="nav-item">Register</a>
+            <a href="/login" class="nav-item">Login</a>
+            <a href="/register" class="nav-item">Register</a>
         </div>
     </div>
 </header>
