--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -1,4 +1,10 @@
 <style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f2f2f2;
+    }
     .courses-grid {
         width: 100%;
         display: flex;
@@ -20,6 +26,7 @@
         border-radius: 5px;
     }
 </style>
+<body>
 <div>
     <h1>Courses</h1>
 </div>
@@ -31,3 +38,4 @@
     </div>
 </div>
 </div>
+</body>
