--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -36,8 +36,8 @@
 <header xmlns:th="http://www.w3.org/1999/xhtml">
     <div class="nav-bar">
         <div class="nav-bar-logo">
-<!--            <img  th:src="@{images/logo.jpg}" >-->
-            CodeCamp
+            <a href="/home"><img  th:src="@{images/logo.png}" ></a>
+
         </div>
         <div class="nav-bar-links">
             <a href="/home" class="nav-item">Home</a>
