--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -28,16 +28,25 @@
     }
 </style>
 <body>
-<div>
-    <h1>Courses</h1>
-</div>
-<div class="courses-grid">
-    <div th:each="course : ${courses}" class="grid-item-wrapper"> <!--  iterate courses here  -->
-        <div class="grid-item">
-            <h1 th:text="${course.getTitle()}"></h1> 
-            <img style="width: 420px; height: 220px; margin-left: 10px" th:src="@{images/courses.png}"><!-- Display course info here   -->
+<div class="courses-grid container">
+    <div style="width: 100%">
+        <h2 style="margin: 50px 20px">Courses</h2>
+    </div>
+    <div style="display: block; width: 100%">
+        <a style="margin: 0 20px 50px" href="/courses/add-form" class="btn btn-primary">Create New Course</a>
+    </div>
+    <div class="row" style="width: 100%">
+        <div th:each="course : ${courses}" style="margin-top: 20px" class="col-md-12 col-lg-6 col-xl-3">
+            <div class="card" style="margin: 0 auto; width: 18rem;">
+                <img class="card-img-top" style="height: 23vh" th:src="${course.getPictureUrl()}" alt="Course Image">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${course.getTitle()}"></h5>
+                    <p class="card-text" th:text="'Semester: ' + ${course.getSemester()}"></p>
+                    <a th:href="@{'/courses/edit-form/{id}' (id=${course.getId()})}" class="btn btn-outline-success">Edit <img src="images/edit.png" width="20"/></a>
+                    <a th:href="@{'/courses/delete/{id}' (id=${course.getId()})}" class="btn btn-outline-danger">Delete  <img src="images/delete.png" width="20"/></a>
+                </div>
+            </div>
         </div>
     </div>
-</div>
 </div>
 </body>
