--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,12 +7,14 @@
   }
 
   .container {
+    display: flex;
     justify-content: center;
     align-items: center;
     height: 70vh;
   }
 
   .form {
+    margin: auto;
     background-color: #fff;
     padding: 10px;
     border-radius: 5px;
