--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
     }
 
     .container {
-      /*display: flex;*/
+      display: flex;
       justify-content: center;
       align-items: center;
       height: 70vh;
